--- a/blogclient/src/App.css
+++ b/blogclient/src/App.css
@@ -17,6 +17,8 @@
     background-color: #282c34;
     min-height: 100vh;
     display: flex;
+    display: -webkit-box;
+    display: -ms-flexbox;
     flex-direction: column;
     align-items: center;
     justify-content: center;
