--- a/blogclient/src/assets/css/component.scss
+++ b/blogclient/src/assets/css/component.scss
@@ -175,8 +175,8 @@
 /***************** 회원가입 *********************/
 .signUp {
     position: absolute;
+    width: 100%;
     margin-top: 70px;
-    padding: 0 20px;
     > p {
         text-align: center;
     }
