--- a/blogclient/src/assets/css/content.css
+++ b/blogclient/src/assets/css/content.css
@@ -1,3 +1,3 @@
-@import url('reset.css');
-@import url('component.css');
-@import url('common.css');
+@import url('reset.scss');
+@import url('component.scss');
+@import url('common.scss');
