--- a/blogclient/src/assets/css/reset.scss
+++ b/blogclient/src/assets/css/reset.scss
@@ -138,3 +138,13 @@ input {
 p {
     margin: 5px 0;
 }
+input,
+textarea,
+button {
+    appearance: none;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    border-radius: 0;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+}
