--- a/blogclient/src/assets/css/common.scss
+++ b/blogclient/src/assets/css/common.scss
@@ -232,7 +232,8 @@ body {
         .title {
             font-size: 15px;
             text-align: center;
-            margin-bottom: 15px;
+            margin: 15px 0;
+            margin-top: 20px;
         }
         /* 회원가입 loginModal */
         .input_wrap {
@@ -270,10 +271,12 @@ body {
             display: -ms-flexbox;
             justify-content: center;
             font-size: 13px;
+            margin-bottom: 10px;
+
             .btn {
                 background: #cacaca;
                 padding: 5px 15px;
-                margin: 20px 10px;
+                margin: 10px 10px;
                 border-radius: 5px;
                 border: solid 1px #c5c5c5;
                 color: white;
