--- a/blogclient/src/assets/css/component.scss
+++ b/blogclient/src/assets/css/component.scss
@@ -311,6 +311,7 @@
     padding-top: 60px;
 
     .title-wrap {
+        position: relative;
         border-bottom: solid 1px rgb(196, 196, 196);
         text-align: center;
         padding: 20px 0;
@@ -324,6 +325,13 @@
         }
         .date {
             font-size: 12px;
+        }
+        .edit-icon-wrapper {
+            position: absolute;
+            right: 0px;
+            .svg {
+                margin-left: 20px;
+            }
         }
     }
     .contents {
