좋아요기능 완성 및 css수정 prdt일때 console제거

--- a/blogclient/src/assets/css/component.scss
+++ b/blogclient/src/assets/css/component.scss
@@ -337,10 +337,10 @@
     .contents {
         text-align: center;
         padding-bottom: 60px;
-        img {
+        .img {
             width: 100%;
         }
-        > div {
+        .content {
             margin-top: 20px;
         }
     }
