회원가입수정

--- a/blogclient/src/assets/css/component.scss
+++ b/blogclient/src/assets/css/component.scss
@@ -178,10 +178,10 @@
     position: absolute;
     width: 100%;
     margin-top: 70px;
-    > p {
+    .p {
         text-align: center;
     }
-    form {
+    .form {
         .default-wrap .input-wrap {
             width: 350px;
             position: relative;
