--- a/blogclient/src/assets/css/component.scss
+++ b/blogclient/src/assets/css/component.scss
@@ -36,6 +36,25 @@
     }
 }
 
+@keyframes slideup-active-animation {
+    0% {
+        bottom: -600px;
+    }
+
+    100% {
+        bottom: none;
+    }
+}
+@keyframes slideup-inactive-animation {
+    0% {
+        bottom: 0;
+    }
+
+    100% {
+        bottom: -600px;
+    }
+}
+
 /************* Banner **************/
 .banner {
     height: 350px;
@@ -116,6 +135,7 @@
         display: -webkit-box;
         display: -ms-flexbox;
         .date {
+            margin-top: 5px;
             display: flex;
             display: -webkit-box;
             display: -ms-flexbox;
@@ -128,16 +148,6 @@
                 font-size: 11px;
             }
         }
-        .title {
-            font-size: 16px;
-            font-weight: 600;
-            width: 250px;
-            text-wrap: nowrap;
-            text-overflow: ellipsis;
-            white-space: nowrap;
-            overflow: hidden;
-            display: inline-block;
-        }
     }
 
     .post-image {
@@ -148,7 +158,7 @@
         display: flex;
         display: -webkit-box;
         display: -ms-flexbox;
-        margin: 10px auto;
+        margin: 15px auto;
         align-items: center;
         .post-main-image {
             height: 100%;
@@ -156,20 +166,48 @@
             object-fit: cover;
         }
     }
-    .content {
+    .contents {
+        .title {
+            font-size: 19px;
+            margin: 3px 0;
+            font-weight: 600;
+            width: 100%;
+            text-wrap: nowrap;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            overflow: hidden;
+            display: inline-block;
+        }
+        .content {
+            margin-top: 5px;
+        }
         display: -webkit-box;
         -webkit-line-clamp: 3;
         -webkit-box-orient: vertical;
         align-items: center;
+        font-size: 13px;
         justify-content: center;
         max-height: 60px;
         width: 320px;
-        font-size: 14px;
         margin: 10px auto;
         /* border: solid 2px blue; */
         word-break: break-word;
         overflow: hidden;
         text-overflow: ellipsis;
+        line-height: 17px;
+    }
+    .bottom-info {
+        width: 320px;
+        display: flex;
+        margin: 10px auto;
+        .likes,
+        .comments {
+            display: flex;
+            margin-right: 10px;
+            .count {
+                margin-left: 5px;
+            }
+        }
     }
 }
 
@@ -371,7 +409,7 @@
             display: -ms-flexbox;
             align-items: center;
             cursor: pointer;
-            p {
+            .likes-count {
                 margin-left: 5px;
             }
         }
