--- a/blogclient/src/assets/css/common.scss
+++ b/blogclient/src/assets/css/common.scss
@@ -95,6 +95,11 @@ body {
     width: 100%;
     height: 60px;
     top: -100px;
+    .go-back {
+        position: absolute;
+        margin-left: 15px;
+        margin-top: 10px;
+    }
     > .p {
         margin-left: 50px;
         font-size: 20px;
