--- a/blogclient/src/assets/css/component.scss
+++ b/blogclient/src/assets/css/component.scss
@@ -121,6 +121,20 @@
     /* border: solid 2px blue; */
     margin-top: 10px;
     height: 100vh;
+    .main-top {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 0px 15px;
+        font-size: 13px;
+        .select {
+            height: 30px;
+            width: 90px;
+            border: none;
+            padding: 0 5px;
+            background: rgba(255, 255, 255, 0);
+        }
+    }
 }
 .post-card {
     border: solid 1px #eaeaea;
@@ -373,10 +387,14 @@
         }
     }
     .contents {
-        text-align: center;
         padding-bottom: 60px;
         .img {
             width: 100%;
+        }
+        .code-wrap {
+            padding: 10px;
+            background: rgb(219, 219, 219);
+            border: solid 1px rgb(167, 167, 167);
         }
         .content {
             margin-top: 20px;
