--- a/blogclient/src/assets/css/common.scss
+++ b/blogclient/src/assets/css/common.scss
@@ -50,6 +50,7 @@
 }
 
 body {
+    line-height: 1.25;
     color: black;
     background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
     font-size: 14px;
@@ -278,7 +279,7 @@ body {
             display: -webkit-box;
             display: -ms-flexbox;
             justify-content: center;
-            font-size: 13px;
+            font-size: 14px;
             margin-bottom: 10px;
 
             .btn {
@@ -320,7 +321,7 @@ body {
             justify-content: space-between;
             align-items: center;
             .close {
-                font-size: 13px;
+                font-size: 14px;
                 border: solid 1px rgb(199, 199, 199);
                 padding: 5px 10px;
             }
@@ -336,7 +337,7 @@ body {
                     font-weight: 700;
                 }
                 .date {
-                    font-size: 11px;
+                    font-size: 12px;
                     color: grey;
                 }
             }
