--- a/blogclient/src/assets/css/component.scss
+++ b/blogclient/src/assets/css/component.scss
@@ -414,8 +414,10 @@
             background: rgb(219, 219, 219);
             border: solid 1px rgb(167, 167, 167);
         }
-        .content {
-            margin-top: 20px;
+        .code-block {
+            padding: 10px;
+            background: rgb(219, 219, 219);
+            border: solid 1px rgb(167, 167, 167);
         }
     }
 }
