--- a/blogclient/src/assets/css/component.scss
+++ b/blogclient/src/assets/css/component.scss
@@ -415,6 +415,7 @@
             border: solid 1px rgb(167, 167, 167);
         }
         .code-block {
+            overflow-x: scroll;
             padding: 10px;
             background: rgb(219, 219, 219);
             border: solid 1px rgb(167, 167, 167);
