--- a/blogclient/src/assets/css/common.scss
+++ b/blogclient/src/assets/css/common.scss
@@ -383,7 +383,7 @@ body {
 }
 /******************** laoding ********************/
 .loading-wrap {
-    position: absolute;
+    position: fixed;
     top: 0;
     height: 100%;
     width: 100%;
