--- a/blogclient/src/assets/css/common.scss
+++ b/blogclient/src/assets/css/common.scss
@@ -1,4 +1,3 @@
-
 @import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
 
 :root {
@@ -57,7 +56,7 @@ body {
     line-height: 1.25;
     color: black;
     font-size: 14px;
-	font-family: 'Noto Sans KR', sans-serif;
+    font-family: 'Noto Sans KR', sans-serif;
 
     .color-red {
         color: red;
@@ -71,10 +70,10 @@ body {
 }
 
 .main-wrap {
-    @media only screen and (min-width: 421px) {
+    @media only screen and (min-width: 681px) {
         width: 680px;
     }
-    @media only screen and (max-width: 420px) {
+    @media only screen and (max-width: 680px) {
         width: 100vw;
     }
     height: inherit;
@@ -84,7 +83,6 @@ body {
     .wrap {
         width: inherit;
         /* overflow: scroll; */
-
     }
 }
 
@@ -106,13 +104,13 @@ body {
         align-items: center;
         margin-left: 20px;
         .p {
-        font-size: 20px;
+            font-size: 20px;
         }
     }
     .go-back {
-      margin-right: 10px;
+        margin-right: 10px;
     }
-    
+
     .input {
         border: solid 1px gainsboro;
         border-radius: 5px;
@@ -386,7 +384,7 @@ body {
     position: fixed;
     top: 0;
     height: 100%;
-    width: 100%;
+    width: inherit;
     z-index: 9999;
     background: rgba(95, 95, 95, 0.548);
     display: flex;
